--- a/arcsight_archiver.config
+++ b/arcsight_archiver.config
@@ -2,15 +2,22 @@
 
 [main]
 # Default archiving path for archsight
-archive_source = /opt/arcsight/logger/data/archives
+#archive_source = /opt/arcsight/logger/data/archives
+archive_source = opt/arcsight/logger/data/archives
+
 # Chose your destination
-archive_destination = /opt/arcsight/logger/data/archives_backup
+#archive_destination = /opt/arcsight/logger/data/archives_backup
+archive_destination = opt/arcsight/logger/data//archives_backup
+
 # Archsight considered 200G as max archiving size(disk usage) by default
 max_src_disk_usage = 153600
+
 # Mximum disk usage for backup folder
 max_dst_disk_usage = 409600
+
 # Keep last N days and more the older backup folders to backup
-keep_last_days = 5
+keep_last_days = 10
+
 # Log file
 log_file = /var/log/arcsight_backup/arcsight_archiver.log
 
@@ -20,5 +27,5 @@ smtp_server  = "localhost"
 port = 25
 from_email = arcsight@mohe.gov.sa
 to_email   = trowidhan@mohe.gov.sa
-subject_email = Arcsight Archiver:
+subject_email = ArcSight Archiver
 
