--- a/arcsight_archiver.config
+++ b/arcsight_archiver.config
@@ -27,5 +27,6 @@ smtp_server  = "localhost"
 port = 25
 from_email = arcsight@mohe.gov.sa
 to_email   = trowidhan@mohe.gov.sa
+cc_email   = securityteam@mohe.gov.sa
 subject_email = ArcSight Archiver
 
