--- a/arcsight_archiver.config
+++ b/arcsight_archiver.config
@@ -1,13 +1,10 @@
-
-
 [main]
 # Default archiving path for archsight
-#archive_source = /opt/arcsight/logger/data/archives
-archive_source = opt/arcsight/logger/data/archives
+archive_source = /opt/arcsight/logger/data/archives
 
 # Chose your destination
-#archive_destination = /opt/arcsight/logger/data/archives_backup
-archive_destination = opt/arcsight/logger/data//archives_backup
+archive_destination = /opt/arcsight/logger/data/archives_backup
+
 
 # Archsight considered 200G as max archiving size(disk usage) by default
 max_src_disk_usage = 153600
@@ -16,17 +13,17 @@ max_src_disk_usage = 153600
 max_dst_disk_usage = 409600
 
 # Keep last N days and more the older backup folders to backup
-keep_last_days = 10
+keep_last_days = 20
 
 # Log file
-log_file = /var/log/arcsight_backup/arcsight_archiver.log
+log_file = arcsight_archiver.log
 
 
 [notifications]
-smtp_server  = "localhost"
-port = 25
-from_email = arcsight@mohe.gov.sa
-to_email   = trowidhan@mohe.gov.sa
-cc_email   = securityteam@mohe.gov.sa
-subject_email = ArcSight Archiver
+mail_server  = mail.domain.gov.sa
+username     = arcsight@domain.gov.sa
+password     = 123123
+to_email     = sss@domain.gov.sa
+cc_email     = bbb@domain.gov.sa,ccc@domain.gov.sa
+
 
